# mlops-python-package

./: .bumpversion.cfg  .cruft.json  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENCE.txt  MLproject  README.md  bikes.html  classes_model_name.plantuml  classes_regression_model_template.plantuml  cliff.toml  constraints.txt  docker-compose.yml  dprint.jsonc  index.html  invoke.yaml  justfile  lefthook.yml  mise.toml  mlflow.db  mlops-python-package.code-workspace  packages_model_name.plantuml  packages_regression_model_template.plantuml  poetry.toml  pyproject.toml  python_env.yaml  requirements.txt  search.js  trivy.yaml
.gemini/: config.yaml
.gemini/skills/MLOps Automation/: SKILL.md
.gemini/skills/MLOps Collaboration/: SKILL.md
.gemini/skills/MLOps Industrialization/: SKILL.md
.gemini/skills/MLOps Initialization/: SKILL.md
.gemini/skills/MLOps Observability/: SKILL.md
.gemini/skills/MLOps Prototyping/: SKILL.md
.gemini/skills/MLOps Validation/: SKILL.md
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: add-request.md  change-request.md  custom-request.md  feat-request.md  fix-request.md
.github/actions/commons/: action.yml
.github/actions/setup/: action.yml
.github/rulesets/: main.json
.github/workflows/: cd.yml  check.yml  ci.yml  main.yml  on-pull-request.yml  on-release-published.yml  publish.yml
Documents/: Base_stories.md  Configs_stories.md  Datasets_stories.md  Evaluations_stories.md  Explanations_stories.md  Inference_stories.md  Metrics_storie.md  Metrics_stories.md  Models_storie.md  Models_stories.md  OSvariables_stories.md  Promotions_stories.md  Regristries_stories.md  Schema_storie.md  Schemas_stories.md  Scripts_stories.md  Searchers_stories.md  Services_stories.md  Settings_stories.md  Signers_stories.md  Splitters_stories.md  Trainning_stories.md  Tuning_stories.md  backlog_mlops_regresion.md  classes_model_name.plantuml  classes_regression_model_template.plantuml  packages_model_name.plantuml  packages_regression_model_template.plantuml
Scripts/: mlserver_model_deploy.sh
bikes/: configs.html  core.html  datasets.html  io.html  jobs.html  metrics.html  models.html  registers.html  schemas.html  scripts.html  searchers.html  services.html  settings.html  splitters.html  utils.html
bikes/core/: metrics.html  models.html  schemas.html
bikes/io/: configs.html  datasets.html  registries.html  services.html
bikes/utils/: searchers.html  signers.html  splitters.html
confs/: evaluations.yaml  explanations.yaml  inference.yaml  promotion.yaml  training.yaml  tuning.yaml
data/: Readme.txt  inputs.parquet  inputs_test.parquet  inputs_train.parquet  models_explanations.parquet  outputs.parquet  samples_explanations.parquet  targets.parquet  targets_test.parquet  targets_train.parquet
notebooks/: explain.ipynb  indicators.ipynb  process.ipynb  processing.ipynb  prototype.ipynb
src/bikes/: __init__.py  __main__.py  configs.py  datasets.py  jobs.py  metrics.py  models.py  registers.py  schemas.py  scripts.py  searchers.py  serializers.py  services.py  settings.py  splitters.py
src/bikes/core/: metrics.py  models.py  schemas.py
src/bikes/io/: __init__.py  datasets.py  registries.py  services.py
src/bikes/jobs/: __init__.py  base.py  evaluations.py  explanations.py  inference.py  promotion.py  training.py  tuning.py
src/bikes/utils/: searchers.py  signers.py  splitters.py
src/model_name/: __init__.py  __main__.py  scripts.py  settings.py
src/model_name/core/: __init__.py  metrics.py  models.py
src/model_name/io/: datasets.py  osvariables.py  registries.py  services.py
src/model_name/jobs/: __init__.py  base.py  evaluations.py  explanations.py  inference.py  kafkainference.py  promotion.py  training.py  tuning.py
src/model_name/utils/: searchers.py  signers.py  splitters.py
src/regression_model_template/: __init__.py  __main__.py  scripts.py  settings.py
src/regression_model_template/core/: metrics.py  models.py
src/regression_model_template/io/: configs.py  datasets.py  osvariables.py  registries.py  services.py
src/regression_model_template/jobs/: __init__.py  base.py  evaluations.py  explanations.py  inference.py  promotion.py  training.py  tuning.py
src/regression_model_template/utils/: __init__.py  searchers.py  signers.py  splitters.py
src/wines/: configs.py  datasets.py  jobs.py  metrics.py  models.py  schemas.py  scripts.py  searchers.py  services.py  splitters.py
tasks/: __init__.py  bump.py  carbons.py  check.just  check.py  checks.py  clean.just  clean.py  cleans.py  commit.just  commits.py  containers.py  dag.py  dags.py  doc.just  docker.just  docker.py  docs.py  format.just  format.py  formats.py  install.just  install.py  installs.py  mlflow.just  mlflow.py  package.just  package.py  packages.py  project.just  projects.py
tests/: conftest.py  test_configs.py  test_datasets.py  test_jobs.py  test_metrics.py  test_models.py  test_registers.py  test_schemas.py  test_scripts.py  test_searchers.py  test_serializers.py  test_services.py  test_splitters.py
tests/confs/: inference.yaml  invalid.yaml  training.yaml  tuning.yaml
tests/confs/invalid/: 1. invalid.yaml
tests/confs/valid/: 1. tuning.yaml  2. training.yaml  3. inference.yaml  4. inference.yaml  5. evaluations.yaml  5. explanations.yaml
tests/core/: test_metrics.py  test_models.py  test_schemas.py
tests/data/: inputs_sample.parquet  output.parquet  outputs_sample.parquet  target.parquet  targets_sample.parquet
tests/io/: test_configs.py  test_datasets.py  test_registries.py  test_services.py
tests/jobs/: test_base.py  test_evaluations.py  test_explanations.py  test_inference.py  test_promotion.py  test_training.py  test_tuning.py
tests/models/: model.joblib
tests/utils/: test_searchers.py  test_signers.py  test_splitters.py
