# https://docs.astral.sh/uv/reference/settings/
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# PROJECT

[project]
name = "bikes"
version = "5.0.0"
description = "Predict the number of bikes available."
authors = [{ name = "Médéric HURIER", email = "github@fmind.dev" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = ["mlops", "python", "package"]
requires-python = ">=3.14"
dependencies = [
  "loguru>=0.7.3",
  "matplotlib>=3.11.0",
  "mlflow>=3.14.0",
  # numba/numpy/pyarrow/shap are ABI-coupled: keep permissive floors so uv's universal
  # (all-platform) resolution stays satisfiable; the lockfile pins the latest tested versions.
  "numba>=0.61.0",
  "numpy>=2.1.3",
  "omegaconf>=2.3.1",
  "pandas>=2.3.3", # MLflow 3.x pins pandas<3; pandas 3.0 is held back by MLflow compat
  "pandera>=0.32.1",
  "plotly>=6.9.0",
  "plyer>=2.1.0",
  "psutil>=7.2.2",
  "pyarrow>=19.0.1",
  "pydantic-settings>=2.14.2",
  "pydantic>=2.13.4",
  "pynvml>=13.0.1",
  "scikit-learn>=1.9.0",
  "setuptools>=83.0.0",
  "shap>=0.46.0",
]

# LINKS

[project.urls]
Homepage = "https://github.com/fmind/mlops-python-package"
Documentation = "https://fmind.github.io/mlops-python-package/bikes.html"
Repository = "https://github.com/fmind/mlops-python-package"
"Bug Tracker" = "https://github.com/fmind/mlops-python-package/issues"
Changelog = "https://github.com/fmind/mlops-python-package/blob/main/CHANGELOG.md"

# SCRIPTS

[project.scripts]
bikes = 'bikes.scripts:main'

# DEPENDENCIES

[dependency-groups]
dev = [
  "lefthook>=2.1.9",
  "pdoc>=16.0.0",
  "pip-audit>=2.9.0",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.6.1",
  "ruff>=0.15.0",
  "ty>=0.0.56,<0.1", # pre-1.0: pin a compatible range until it stabilizes
  "validate-pyproject>=0.25",
]
notebook = ["ipykernel>=6.29.5", "nbformat>=5.10.4"]

# TOOLS

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = [
  "A", # flake8-builtins
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # pydocstyle (documented public API)
  "E", # pycodestyle errors
  "ERA", # eradicate (no commented-out code)
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FURB", # refurb (modern constructs)
  "I", # isort (import sorting)
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "PERF", # Perflint
  "PGH", # pygrep-hooks
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # ruff-specific rules
  "S", # flake8-bandit (security; replaces bandit)
  "SIM", # flake8-simplify
  "SLF", # flake8-self
  "T10", # flake8-debugger
  "T20", # flake8-print
  "TID", # flake8-tidy-imports
  "UP", # pyupgrade
  "W", # pycodestyle warnings
]
ignore = [
  "E501", # line length handled by the formatter
  "N812", # project convention: `import typing as T`
  "UP040", # some aliases double as runtime constructors (PEP 695 `type` would break them)
  "RUF012", # Pydantic copies mutable field defaults per-instance (rule false-positive here)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "D100", # missing docstring in public module
  "D103", # missing docstring in public function
  "S101", # asserts allowed in tests
  "T201", # prints allowed in tests
  "PTH", # os.path allowed in test helpers
  "PT003", # explicit scope="function" kept for teaching clarity
  "ARG002", # fixtures requested for their side effects
  "SLF001", # tests may access internals
]
"notebooks/**" = [
  "S101", # asserts allowed in exploratory notebooks
  "T201", # prints allowed in exploratory notebooks
]

[tool.ty.environment]
python-version = "3.14"

# `ty` (pre-1.0) does not model Pydantic/pandera/MLflow dynamic typing yet; relax the
# categories they trigger so `ty` still gates real errors (undefined names, bad calls).
[tool.ty.rules]
invalid-argument-type = "ignore" # dynamic ML/MLflow call sites
invalid-frozen-dataclass-subclass = "ignore" # ty reads frozen Pydantic models as frozen dataclasses
invalid-type-form = "ignore" # pandera typed Series / dynamic type forms
not-subscriptable = "ignore" # optional dynamic MLflow attributes
possibly-missing-submodule = "ignore" # lazily-loaded mlflow.* submodules
unresolved-attribute = "ignore" # dynamic attributes on MLflow/pandera objects

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-fail-under=80",
]
pythonpath = ["src"]
testpaths = ["tests"]
xfail_strict = true

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# SYSTEMS

[build-system]
requires = ["uv_build>=0.9.0"]
build-backend = "uv_build"
